--- a/style.css
+++ b/style.css
@@ -283,7 +283,12 @@ body {
 
 .experience h2 {
   padding-bottom: 10px;
+  font-weight: normal;
 }
+
+/* .experience h3 {
+  font-weight: normal;
+} */
 
 .experience dialog { 
  background-color: #000C1D; 
